# agents-course

./: Dockerfile  README.md  pyproject.toml  sumit
.github/workflows/: build_documentation.yml  build_pr_documentation.yml  upload_pr_documentation.yml
esp32-alexa-wakeword/: .gitignore  CMakeLists.txt  HARDWARE_GUIDE.md  LICENSE  QUICK_START.md  README.md  README_EN.md  TROUBLESHOOTING.md  sdkconfig.defaults
esp32-alexa-wakeword/components/esp-sr/: CMakeLists.txt  esp_sr_placeholder.c
esp32-alexa-wakeword/main/: CMakeLists.txt  i2s_config.c  i2s_config.h  main.c  wake_word_detector.c  wake_word_detector.h
esp32-alexa-wakeword/tools/: flash_and_monitor.sh  pack_model.py
notebooks/bonus-unit2/: monitoring-and-evaluating-agents.ipynb
notebooks/unit1/: agentTasks.py  dummy_agent_library.ipynb  tokenizer_config.json
notebooks/unit2/langgraph/: mail_sorting.ipynb
notebooks/unit2/llama-index/: workflows.ipynb
notebooks/unit2/smolagents/: code_agents.ipynb
scripts/: vi.py
units/: test.md
units/en/: _toctree.yml
units/en/bonus-unit1/: fine-tuning.mdx  what-is-function-calling.mdx
units/en/bonus-unit2/: monitoring-and-evaluating-agents-notebook.mdx
units/en/bonus-unit3/: building_your_pokemon_agent.mdx
units/en/communication/: live1.mdx
units/en/unit0/: discord101.mdx  introduction.mdx  (+1 more)
units/ja/: README.md  _toctree.yml
units/ko/: _toctree.yml
units/my/: _toctree.yml
units/pt-BR/: _toctree.yml
units/pt_br/: _toctree.yml
units/ru/: _toctree.yml
units/tr/: _toctree.yml
units/vi/: _toctree.yml
units/zh-CN/: _toctree.yml
(+490 files in other folders)
